--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc-watch --onSuccess \"nodemon dist/app.js\""
   },
-  
-
   "author": "",
   "license": "ISC",
   "description": "",
@@ -15,7 +13,8 @@
     "express": "^5.1.0",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "tsc-watch": "^7.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.5"
